Vẽ thêm bảng tính điểm, thêm hiệu ứng x turn, y turn

--- a/CaroGame/CaroGame.vcxproj
+++ b/CaroGame/CaroGame.vcxproj
@@ -134,6 +134,10 @@
     <ClInclude Include="Model.h" />
     <ClInclude Include="View.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="OTURN.txt" />
+    <Text Include="XTURN.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
